deps/v8/test/message/fail/import-eval.out
*%(basename)s:5: SyntaxError: Unexpected eval or arguments in strict mode
import { eval } from "mod";
         ^^^^
SyntaxError: Unexpected eval or arguments in strict mode
